tests/pass/Static.java
package pass;

import java.lang.System;
public class Static {

//    public static int x = 0;
//
//    public static void main(String[] args) {
//        System.out.println(x);
//    }
}
